--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ github:
   edit: true
   repository: v25
 conference:
-  name: 
+  name: Asian Conference on Machine Learning
   url: 
   location: Singapore Management University, Singapoore
   dates:
