--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# Site settings
-# Auto generated from v25.bib
 ---
 booktitle: Proceedings of the Asian Conference on Machine Learning
 publisher: PMLR
@@ -15,6 +13,7 @@ sections:
 - name: default
   title: Accepted Papers
 layout: proceedings
+series: Proceedings of Machine Learning Research
 id: BuntineACML2012
 month: 0
 abstract: ''
@@ -47,3 +46,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+# Site settings
+# Auto generated from v25.bib
