Update styles, headers, _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,19 @@ editor:
   family: Hoi
 - given: Wray
   family: Buntine
-title: Proceedings of the Asian Conference on Machine Learning
-email: ''
-description: Proceedings of the Asian Conference on Machine Learning, Singapore Management
-  University, Singapore
+title: Proceedings of Machine Learning Research
+description: |
+  Proceedings of the Asian Conference on Machine Learning
+    Held in Singapore Management University, Singapore on 4-06 November 2012
+
+  Published as Volume 25 by the Proceedings of Machine Learning Research on 17 November 2012.
+
+  Volume Edited by:
+    Steven C. H. Hoi
+    Wray Buntine
+
+  Series Editors:
+    Neil D. Lawrence
 url: http://proceedings.mlr.press
 baseurl: "/v25"
 twitter_username: mlresearch
@@ -35,6 +44,7 @@ permalink: "/:title.html"
 github:
   edit: true
   repository: v25
+email: ''
 conference:
   name: Asian Conference on Machine Learning
   url: 
