--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ month: 0
 abstract: ''
 tex_title: 
 title: Proceedings of Machine Learning Research
+cycles: false
 editor:
 - given: Steven C. H.
   family: Hoi
@@ -46,9 +47,12 @@ permalink: "/:title.html"
 github:
   edit: true
   repository: v25
-bibtex_copy: true
-endnote_copy: true
-apa_copy: true
+display:
+  copy_button:
+    bibtex: true
+    endnote: true
+    apa: true
+  comments: false
 email: ''
 conference:
   name: Asian Conference on Machine Learning
