--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ description: |
   Series Editors:
     Neil D. Lawrence
 date_str: 04--06 Nov
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 baseurl: "/v25"
